build: enabled packaging to different OS